@@ -7114,6 +7114,14 @@ $wgHKDFSecret = false;
 $wgHKDFAlgorithm = 'sha256';
 
 /**
+ * Enable page language feature
+ * Allows setting page language in database
+ * @var bool
+ * @since 1.24
+ */
+$wgPageLanguage = false;
+
+/**
  * For really cool vim folding this needs to be at the end:
  * vim: foldmarker=@{,@} foldmethod=marker
  * @}
