@@ -1,0 +1,2 @@
+ALTER TABLE /*$wgDBprefix*/page
+  ADD page_lang varbinary(35) DEFAULT NULL;
